bugfix: resolvendo erro ao gerar endpoints de estudantes sem schema request
